--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>KrakenFlow</title>
+  <title>TaxoFlow</title>
   <link rel="icon" href="assets/Kraken_logo.png" sizes="32x32">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,8 +11,8 @@
   <header id="topbar" class="topbar">
     <div class="topbar-inner">
       <div class="topbar-left">
-        <span class="topbar-title">KrakenFlow</span>
-        <img class="topbar-logo" src="assets/Kraken_logo.png" alt="KrakenFlow logo">
+        <span class="topbar-title">TaxoFlow</span>
+        <img class="topbar-logo" src="assets/Kraken_logo.png" alt="TaxoFlow logo">
       </div>
       <div class="topbar-right">
         <span>Built by <a href="https://github.com/jeffe107" class="topbar-link">Jeferyd Yepes-García</a></span>
@@ -34,7 +34,7 @@
         </button>
       </div>
       <div class="sidebar-hero">
-        <img src="assets/Kraken_logo.png" alt="KrakenFlow logo large" class="sidebar-hero-img">
+        <img src="assets/Kraken_logo.png" alt="TaxoFlow logo large" class="sidebar-hero-img">
       </div>
     </aside>
     <main class="content">
