--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TaxoFlow</title>
-  <link rel="icon" href="assets/Kraken_logo.png" sizes="32x32">
+  <link rel="icon" href="assets/taxoflow_logo.png" sizes="32x32">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="topbar-inner">
       <div class="topbar-left">
         <span class="topbar-title">TaxoFlow</span>
-        <img class="topbar-logo" src="assets/Kraken_logo.png" alt="TaxoFlow logo">
+        <img class="topbar-logo" src="assets/taxoflow_logo.png" alt="TaxoFlow logo">
       </div>
       <div class="topbar-right">
         <span>Built by <a href="https://github.com/jeffe107" class="topbar-link">Jeferyd Yepes-García</a></span>
